--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Basic Type Script rest project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/app.js"
   },
   "author": "Yansh",
   "license": "ISC",
